# ifopt

./: .gitignore  CMakeLists.txt
ifopt_core/include/ifopt/: bounds.h  composite.h  constraint_set.h  cost_term.h  variable_set.h
ifopt_core/src/: composite.cc  leaves.cc
ifopt_core/test/ifopt/: test_vars_constr_cost.h
ifopt_nlopt/: CMakeLists.txt
ifopt_nlopt/cmake/: FindNLOPT.cmake
ifopt_nlopt/include/ifopt/: nlopt_adapter.h  nlopt_solver.h
ifopt_nlopt/src/: nlopt_adapter.cc  nlopt_solver.cc
ifopt_nlopt/test/: ex_test_nlopt.cc
ifopt_snopt/include/ifopt/: snopt_adapter.h
ifopt_snopt/src/: snopt_adapter.cc
